--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@ body {
     display: flex;
     justify-content: center;
     min-width: 100vw;
-    min-height: 100vh;
+    min-height: 90vh;
     overflow-x: hidden;
+    background-color: #F5F7FB;
 }
 .App {
     max-width: 50vw;
@@ -38,9 +39,10 @@ body {
 }
 .line-div {
     width: 100%;
-    height: 0.5px;
-    background-color:#293264;
     margin-top: 20px;
+    height: 0.5px;
+    background-color: rgba(128, 128, 128, 0.3);
+    margin-bottom: 40px;
 }
 .button-div {
     display: flex;
@@ -63,4 +65,68 @@ body {
 .submit-button:hover {
     transform: scale(1.1);
 }
+.front-page {
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.front-page select {
+    padding: 10px 10px;
+    width: 400px;
+    border-radius: 20px;
+    font-size: 17px;
+}
 
+.front-page h2 {
+    font-size: 40px;
+    margin: 0px;
+    color: #293264;
+}
+.front-page h3 {
+    font-size: 20px;
+    margin-top: 30px;
+    color: #4D5B9E;
+    margin-bottom: 80px;
+}
+.front-page h4 {
+    align-self:flex-start;
+}
+.front-page button {
+    width: 100%;
+    padding: 10px 10px;
+    font-size: 20px;
+    background-color: #4D5B9E;
+    border: none;
+    color: #F5F7FB;
+    border-radius: 20px;
+    margin-top: 40px;
+    transition: transform 200ms;
+    cursor: pointer;
+}
+
+.front-page button:hover {
+    transform: scale(1.1);
+}
+
+.main {
+    position: relative;
+    padding: 60px 100px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px gray;
+}
+.blob1, .blob2 {
+    position: absolute;
+    width: 200px;
+    border-radius: 20px;
+    z-index: -1;
+}
+.blob1 {
+    top: 0px;
+    right: 0px;
+}
+.blob2 {
+    bottom: 0px;
+    left: 0px;
+}
